cabal-version: 2.4
name: icache
version: 1.0.0
license: BSD-3-Clause
build-type: Simple

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  default-language: Haskell2010

library
  import: common-options
  build-depends: base < 5
                , mtl
                , containers
                , lens
                , clash-prelude
                , ghc-typelits-natnormalise
                , ghc-typelits-extra
                , ghc-typelits-knownnat
  hs-source-dirs: src
  other-modules: Utils.Debug
  exposed-modules: ICache.Types
                  , ICache.Cache

test-suite icache-test
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: Main.hs
  other-modules:
  build-depends: icache
               , base < 5
               , ghc-typelits-natnormalise
               , ghc-typelits-extra
               , ghc-typelits-knownnat

               -- Tasty + Hedgedog for testing
               , tasty 
               , tasty-expected-failure
               , hedgehog
               , tasty-hedgehog
  default-language: Haskell2010
